--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ header {
 }
 
 header figure {
+  margin: 0;
   padding: 10px;
 }
 
@@ -395,8 +396,8 @@ footer .container .row .enlaces a {
   header {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 120px 120px;
-        grid-template-rows: 120px 120px;
+    -ms-grid-rows: 70px 70px;
+        grid-template-rows: 70px 70px;
     justify-items: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -415,8 +416,8 @@ footer .container .row .enlaces a {
             justify-content: space-evenly;
   }
   header figure a img {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     margin: 0 5px;
   }
   header figure a img:nth-child(2) {
@@ -430,7 +431,8 @@ footer .container .row .enlaces a {
     -ms-grid-row-span: 1;
     grid-row: 2 / 3;
     text-align: center;
-    font-size: 22px;
+    font-size: 18px;
+    margin: 0;
   }
   header div a {
     display: block;
