--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,6 +92,7 @@ header {
   z-index: 1000;
 
   figure {
+    margin: 0;
     padding: $normal;
 
     img {
@@ -418,7 +419,7 @@ footer {
 
   header {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 120px 120px;
+    grid-template-rows: 70px 70px;
     justify-items: center;
     align-items: center;
     z-index: 1000;
@@ -429,8 +430,8 @@ footer {
         display: flex;
         justify-content: space-evenly;
         img {
-          width: 70px;
-          height: 70px;
+          width: 50px;
+          height: 50px;
           margin: 0 $small;
         }
 
@@ -445,7 +446,8 @@ footer {
       grid-row: 2 / 3;
      
       text-align: center;
-      font-size: $font_big;
+      font-size: $font_normal;
+      margin:0;
     }
 
     div {
